# run-tasks

./: .gitignore  README.md  common.py  config.py  db.py  main.py  pyproject.toml  requirements.txt  root_common.py  root_config.py  task_manager.py  test_db.py  utils.py
.github/workflows/: run-tests.yml
app_task_manager/: common.py  config.py  main.py  utils.py
app_task_manager/external_task_storage/: main.py
app_task_manager/units/: base_unit.py  executor_unit.py  maintenance_unit.py  notification_unit.py  scheduler_unit.py
app_web/: app.py  common.py  config.py  main.py
app_web/api/: api.py
app_web/static/: base.css
app_web/static/css/: base.css
app_web/static/js/: base.js  index.js  notifications.js  task.js  task_all_logs.js  task_base.js  task_create.js  task_create_or_update.js  task_run.js
app_web/templates/: base.html  index.html  login.html  notifications.html  task.html  task_base.html  task_create.html  task_create_or_update.html  task_run.html
app_web/templates/textarea-line-numbers/: fragment.html
etc/: example-config.yaml  example_add_tasks.py  run_app_manager.bat  run_app_web.bat  test_template_with_jinja_for_notification.py
migrations/: 001.py  002.py
src/run_tasks/: common.py  config.py  db.py
src/run_tasks/app_task_manager/: common.py  config.py  main.py  utils.py
src/run_tasks/app_web/: app.py  common.py  config.py  main.py
src/run_tasks/etc/: example-config.yaml  example_add_tasks.py  run_app_manager.bat  (+1 more)
tests/: __init__.py  test_app_task_manager.py  test_app_web.py  test_db.py  test_web_api.py  test_web_pages.py
(+26 files in other folders)
